; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_advansys.c_AscReadEEPWord.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_advansys.c_AscReadEEPWord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ASC_EEP_CMD_WRITE_DISABLE = common dso_local global i32 0, align 4
@ASC_EEP_CMD_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @AscReadEEPWord to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AscReadEEPWord(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @ASC_EEP_CMD_WRITE_DISABLE, align 4
  %9 = call i32 @AscWriteEEPCmdReg(i32 %7, i32 %8)
  %10 = call i32 (...) @AscWaitEEPRead()
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @ASC_EEP_CMD_READ, align 4
  %13 = or i32 %11, %12
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @AscWriteEEPCmdReg(i32 %14, i32 %15)
  %17 = call i32 (...) @AscWaitEEPRead()
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @AscGetChipEEPData(i32 %18)
  store i32 %19, i32* %5, align 4
  %20 = call i32 (...) @AscWaitEEPRead()
  %21 = load i32, i32* %5, align 4
  ret i32 %21
}

declare dso_local i32 @AscWriteEEPCmdReg(i32, i32) #1

declare dso_local i32 @AscWaitEEPRead(...) #1

declare dso_local i32 @AscGetChipEEPData(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
